using tailwind css
Signed-off-by: Bhart singh <monuranoliya731@gmail.com>

--- a/style.css
+++ b/style.css
@@ -133,7 +133,7 @@ header {
     text-align: center;
 }
 
-.category-col {
+.categry-col {
     padding: 10px 0px;
     cursor: pointer;
     color: rgb(85, 83, 83);
