--- a/style.css
+++ b/style.css
@@ -1,11 +1,19 @@
 * {
-    margin: 0%;
-    padding: 0%;
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
-    font-family: 'Roboto', sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 /* <!-- header section --> */
+/* mobile */
+/* .checkbtn {
+    font-size: 30px;
+     color: white; 
+    float: right;
+    line-height: 80px;
+    margin-right: 40px; */
+
 
 header {
     display: flex;
@@ -21,7 +29,7 @@ header {
 .header-left {
     width: 20%;
     text-align: right;
-    margin: 5px 0px;
+    margin: 0px 0px;
     cursor: pointer;
 }
 
@@ -38,6 +46,7 @@ header {
 .header-left-p a {
     font-size: 10px;
     letter-spacing: 1.5px;
+
 }
 
 .header-left-p span {
@@ -54,7 +63,7 @@ header {
 .header-center {
     width: 40%;
     text-align: left;
-    line-height: 50px;
+    line-height: 52px;
     cursor: pointer;
     padding-left: 10px;
     position: relative;
@@ -115,16 +124,16 @@ header {
 
 /* <!-- offer section --> */
 
-.offer {
-    width: 100%;
-    text-align: center;
-  
-}
+/* .offer { 
+     width: 100%; 
+     text-align: center;
+
+  }  */
 
 /* <!-- category-section --> */
 
 
-.category-row {
+/*.category-row {
     display: flex;
     justify-content: space-evenly;
     width: 100%;
@@ -146,7 +155,7 @@ header {
 
 .category-col h5:hover {
     color: #2874f0;
-}
+}*/
 
 /* <!-- banner section --> */
 .banner {
@@ -428,7 +437,7 @@ footer {
     cursor: pointer;
     text-align: center;
     line-height: 50px;
-    letter-spacing: .7px;
+    letter-spacing: .5px;
 }
 
 .fa-shopping-bag,
